Route zum kicken eines Spielers eingerichtet
